<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/loginLinLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/LogoWidth"
            android:layout_height="@dimen/LogoHeight"
            android:layout_marginTop="-40dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_prototype_1" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/EditTextHeight"
            android:layout_marginLeft="@dimen/EditTextMargin"
            android:layout_marginTop="100px"
            android:layout_marginRight="@dimen/EditTextMargin"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/Grey"
            tools:layout_editor_absoluteX="4dp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/EditTextHeight"
            android:layout_margin="@dimen/EditTextMargin"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/Grey"
            tools:layout_editor_absoluteX="4dp" />

        <Button
            android:id="@+id/loginBTN"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/Login"
            android:textColor="@color/White"
            android:layout_gravity="center"
            android:textSize="@dimen/_18sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_gravity="center"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"/>

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="210dp">

            <TextView
                android:id="@+id/CreateAccountText"
                android:layout_width="240dp"
                android:layout_height="55dp"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/CreateAccount"
                android:textColor="@color/Grey"
                android:textSize="@dimen/_17sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="250dp"
                android:layout_centerHorizontal="true"
                android:layout_height="1dp"
                android:layout_below="@id/CreateAccountText"
                android:background="@color/Grey" />

            <TextView
                android:id="@+id/ContactUsText"
                android:layout_below="@id/divider"
                android:layout_width="240dp"
                android:layout_height="55dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/ContactUs"
                android:textColor="@color/Grey"
                android:textSize="@dimen/_17sp" />

        </RelativeLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>