<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/transparentwhite"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/infoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/cardview_bg_white"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/informationList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cardview_bg_white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:fontFamily="@font/rancho"
                    android:padding="@dimen/information_padding_10dp"
                    android:text="@string/information"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rancho"
                    android:padding="@dimen/information_padding_10dp"
                    android:text="@string/opening_hours"
                    android:textColor="@color/Red"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/openingHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rancho"
                    android:paddingTop="@dimen/information_padding_10dp"
                    android:paddingBottom="@dimen/information_padding_10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rancho"
                    android:padding="@dimen/information_padding_10dp"
                    android:text="@string/price"
                    android:textColor="@color/LightBlue"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rancho"
                    android:padding="@dimen/information_padding_10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rancho"
                    android:padding="@dimen/information_padding_10dp"
                    android:text="@string/rating"
                    android:textColor="@color/Green"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rancho"
                    android:paddingTop="@dimen/information_padding_10dp"
                    android:paddingBottom="@dimen/information_padding_10dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>