<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="@dimen/backArrowDimens"
                android:layout_height="@dimen/backArrowDimens"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/back_arrow_black" />

            <TextView
                android:id="@+id/attractionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/pompiere"
                android:gravity="center_horizontal"
                android:text="Settings"
                android:textColor="@color/black"
                android:textSize="28sp" />

        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_caps"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/accountLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/AccountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:paddingBottom="10dp"
                    android:text="@string/account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/AccountTextView"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:gravity="center_vertical"
                    android:text="Email"
                    android:textColor="@color/Grey"
                    android:textSize="@dimen/_18sp" />


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/languageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/languageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:paddingBottom="10dp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <TextView
                    android:id="@+id/languageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/languageTitle"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:gravity="center_vertical"
                    android:text="English"
                    android:textColor="@color/Grey"
                    android:textSize="@dimen/_18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notificationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/notificationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:paddingBottom="10dp"
                    android:text="@string/notification"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/log_out_capital"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/logoutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/logoutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="110dp"
                    android:layout_marginLeft="90dp"
                    android:gravity="center_vertical"
                    android:text="@string/log_out"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_17sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="60dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/logout" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



































