<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.ChangePasswordActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_arrow_black" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/EditTextMargin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/EditTextMargin"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:text="Reset Password "
            android:textSize="@dimen/_20sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:text="Enter your new password below"
            android:textSize="@dimen/_17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/current_password"
            android:textSize="@dimen/_17sp" />

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/PasswordEditTextHeight"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/EditTextMargin"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/EditTextMargin"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="textPassword"
            android:textSize="@dimen/_17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_password"
            android:textSize="@dimen/_17sp" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/PasswordEditTextHeight"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/EditTextMargin"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/EditTextMargin"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="textPassword"
            android:textSize="@dimen/_20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm_password"
            android:textSize="@dimen/_17sp" />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/PasswordEditTextHeight"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/EditTextMargin"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/EditTextMargin"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="textPassword"
            android:textSize="@dimen/_20sp" />

        <Button
            android:id="@+id/loginBTN"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/submit"
            android:textColor="@color/White"
            android:textSize="@dimen/_18sp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>